fix whitespace

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-body{
+*{
+  border: 2px solid yellow;
+}
+p{
+  display:inline-block;
+}
+html,body{
   text-align: center;
+  background-color: #9e3f33;
+  height:100%;
 }
 .row{
   background-color: #9e3f33;
@@ -35,8 +43,8 @@ body{
 }
 
 #Timer{
-  position: relative;
-  bottom: 12rem;
+   position: relative;
+    bottom: 12rem;
   left: 0.7rem;
   font-size: 3.5rem;
   font-family:'Acme', sans-serif;
